tests/compile_fail/logic_macro_malformed_reset.rs
fn main() {
    let mut design = rrtl::Design::new();
    let mut m = design.module("Bad");
    let _ = rrtl::logic! {
        m {
            reset count = rst = 0;
        }
    };
}
