tests/compile_fail/logic_macro_malformed_reset.stderr
error: expected `:`
 --> tests/compile_fail/logic_macro_malformed_reset.rs:6:25
  |
6 |             reset count = rst = 0;
  |                         ^
